--- a/UnifiedResources/DefaultResources/Test/TestBenefitsEmployeeProfile.resx
+++ b/UnifiedResources/DefaultResources/Test/TestBenefitsEmployeeProfile.resx
@@ -90,4 +90,8 @@
     <value>There was an issue when trying to generate the Benefit Summary.</value>
     <comment>Benefits Administration- Error message shown to the administrator when exception occurs in Updating Benefits Summary</comment>
   </data>
+  <data name="msgUpdateBenefitsSummaryFailedAddedNewTest" xml:space="preserve">
+    <value>We weren't able to generate the Benefit Summary - this is a test value</value>
+    <comment>Benefits Administration- A different Error message shown to the administrator when exception occurs in Updating Benefits Summary - this is a test comment</comment>
+  </data>
 </root>
