Translate UnifiedResources/DefaultResources/Test/TestBenefitsEmployeeProfile.resx to ja-JP

--- a/UnifiedResources/LocalizedResources/Test/TestBenefitsEmployeeProfile.ja-JP.resx
+++ b/UnifiedResources/LocalizedResources/Test/TestBenefitsEmployeeProfile.ja-JP.resx
@@ -90,4 +90,8 @@
     <value>福利厚生の概要の生成中にエラーが発生しました。</value>
     <comment>Benefits Administration- Error message shown to the administrator when exception occurs in Updating Benefits Summary</comment>
   </data>
+  <data name="msgUpdateBenefitsSummaryFailedAddedNewTest" xml:space="preserve">
+    <value>We weren&apos;t able to generate the Benefit Summary - this is a test value</value>
+    <comment>Benefits Administration- A different Error message shown to the administrator when exception occurs in Updating Benefits Summary - this is a test comment</comment>
+  </data>
 </root>
